--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-calendars": "^1.1278.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-slideable-calendar-strip": "^0.4.0",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
