--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-calendars": "^1.1278.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-progress": "^5.0.0",
+    "react-native-safe-area-context": "^4.0.1",
+    "react-native-screens": "^3.12.0",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
